--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -19,3 +19,12 @@ body {
   bottom: 0;
   left: 0;
 }
+
+#credit {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: 10px;
+  font-family: sans-serif;
+  color: white;
+}
